<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center">

<TableLayout
android:layout_width="wrap_content"
android:layout_height="wrap_content"
    android:gravity="center_horizontal">

<TableRow
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:layout_gravity="center"
        android:text="@string/equipment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1" />

</TableRow>

<TableRow>

    <TextView
        android:text="@string/screen_s"
        android:id="@+id/edtScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1" />

    <EditText

        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="LabelFor" />







</TableRow>

<TableRow>

    <TextView
        android:text="@string/console_s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1" />

    <EditText
        android:layout_width="wrap_content"
        android:id="@+id/edtConsole"
        android:inputType="number"
        android:layout_height="wrap_content"
        tools:ignore="LabelFor" />
</TableRow>

<TableRow
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/btnJoin"
        android:layout_column="2" />
</TableRow>

</TableLayout>
</LinearLayout>