<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/AppTheme"
    tools:context="com.hall.jia.tournamentsquareapp.LoginActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/tournament_square"
        android:textSize="24sp"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="30dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/logEmail"
            android:layout_width="match_parent"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingTop="0dp"
            android:singleLine="true"
            app:backgroundTint="@color/text"
            android:textColor="@color/text"
            tools:ignore="MissingPrefix" />

        <EditText
            android:id="@+id/logPassword"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            app:backgroundTint="@color/text"
            android:textColor="@color/text"
            tools:ignore="MissingPrefix" />


        <CheckBox
            android:id="@+id/passwordVisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/show_password"
            android:textColor="@color/text" />

        <Button
            android:id="@+id/btnLogin"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/buttonstyleblue"
            android:paddingHorizontal="50dp"
            android:text="@string/login"
            android:textColor="@color/buttontxt" />

        <TextView
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:text="@string/dont_have_an_account_register_here"
            android:textColor="#fff"
            android:textSize="13sp" />
    </LinearLayout>


</LinearLayout>