<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    tools:context="com.hall.jia.tournamentsquareapp.RegisterActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/tournament_square"
        android:textColor="@color/text"
        android:textSize="24sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="vertical">



        <EditText
            android:id="@+id/regEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/email"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/text"
            android:textColorHint="@color/text"
            app:backgroundTint="@color/text"
            tools:ignore="MissingPrefix"/>


        <EditText
            android:id="@+id/regUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/username"
            android:drawableStart="@drawable/ic_person_outline_black_24dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/text"
            android:textColorHint="@color/text"
            app:backgroundTint="@color/text"
            tools:ignore="MissingPrefix"/>


        <EditText
            android:id="@+id/regPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"

            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/text"
            android:textColorHint="@color/text"
            app:backgroundTint="@color/text"
            app:passwordToggleEnabled="true"
            tools:ignore="MissingPrefix"
            tools:textColorLink="@color/text" />

        <CheckBox
            android:id="@+id/passwordVisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Show password"
            android:textColor="@color/text" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttonstyleblue"
            android:paddingHorizontal="50dp"
            android:textColor="@color/buttontxt" />



    </LinearLayout>

</LinearLayout>